More spacing fixes on the upload page, Ready for mobile: Sampson

--- a/client/src/components/css/inputForm.css
+++ b/client/src/components/css/inputForm.css
@@ -7,9 +7,5 @@
   border-radius: 0.3em;
   margin: 2%;
   background-color: rgba(255, 255, 255, 0.75);
-  object-fit: cover;
-}
-
-.row{
-  margin-right: 4%;
+  object-fit: auto;
 }
